--- a/main.tex
+++ b/main.tex
@@ -36,6 +36,6 @@
 \include{\TexPath/2020}
 \include{\TexPath/2021}
 % \include{\TexPath/2022}
-% \include{\TexPath/2023}
+\include{\TexPath/2023}
 \include{\TexPath/2024}
 \end{document}
