--- a/tex/2023.tex
+++ b/tex/2023.tex
@@ -1,3 +1,3 @@
 \Year{\currfilebase}
 \input{\currfiledir\currfilebase/2}
-\input{\currfiledir\currfilebase/3}
+% \input{\currfiledir\currfilebase/3}
