--- a/tex/progress.tex
+++ b/tex/progress.tex
@@ -57,7 +57,7 @@ Progress: None.
 
 \clearpage
 \section*{Paper II}
-Progress: Finished 2017, 2018 and 2024.
+Progress: Finished 2017, 2018 and 2023, 2024.
 
 \begin{center}
     \begin{tabular}{c|cccccccccccccccc}
@@ -100,7 +100,7 @@ Progress: Finished 2017, 2018 and 2024.
         2020 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
         2021 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
         2022 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
-        2023 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
+        2023 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A \\
         2024 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A
     \end{tabular}
 \end{center}
